--- a/.github/workflows/deploy-nextjs.yml
+++ b/.github/workflows/deploy-nextjs.yml
@@ -17,9 +17,7 @@ on:
         required: true
       aws-region:
         required: true
-      admin_user_pool_id:
-        required: false
-      admin_user_pool_web_client_id:
+      next_public_app_account:
         required: false
       sentry-auth-token:
         required: false
@@ -37,8 +35,7 @@ jobs:
         working-directory: infra
 
     env:
-      ADMIN_USER_POOL_ID: ${{ secrets.admin_user_pool_id || '' }}
-      ADMIN_USER_POOL_WEB_CLIENT_ID: ${{ secrets.admin_user_pool_web_client_id || '' }}
+      NEXT_PUBLIC_APP_ACCOUNT: ${{ secrets.next_public_app_account || '' }}
 
     steps:
       - name: Checkout repo
@@ -73,8 +70,7 @@ jobs:
         if: steps.cache-artefacts.outputs.cache-hit != 'true'
         working-directory: ${{ github.workspace }}
         env:
-          ADMIN_USER_POOL_ID: ${{ secrets.admin_user_pool_id || '' }}
-          ADMIN_USER_POOL_WEB_CLIENT_ID: ${{ secrets.admin_user_pool_web_client_id || '' }}
+          NEXT_PUBLIC_APP_ACCOUNT: ${{ secrets.next_public_app_account || '' }}
         run: |
           if [[ -d infra/node_modules/@sladg/nextjs-lambda ]]; then
             npm exec --yes --package infra/node_modules/@sladg/nextjs-lambda -- next-utils pack
@@ -92,8 +88,7 @@ jobs:
       - name: Deploy
         env:
           AWS_ACCOUNT_ID: ${{ steps.aws-credentials.outputs.aws-account-id }}
-          ADMIN_USER_POOL_ID: ${{ secrets.admin_user_pool_id || '' }}
-          ADMIN_USER_POOL_WEB_CLIENT_ID: ${{ secrets.admin_user_pool_web_client_id || '' }}
+          NEXT_PUBLIC_APP_ACCOUNT: ${{ secrets.next_public_app_account || '' }}
           SENTRY_DSN: ${{ secrets.sentry-dsn }}
           SENTRY_ENVIRONMENT: ${{ secrets.sentry-environment }}}
           SENTRY_AUTH_TOKEN: ${{ secrets.sentry-auth-token }}
