--- a/.github/workflows/deploy-nextjs.yml
+++ b/.github/workflows/deploy-nextjs.yml
@@ -11,7 +11,9 @@ on:
         required: false
         default: ""
       next_public_app_account:
+        default: ""
         required: false
+        type: string
     secrets:
       aws-access-key-id:
         required: true
