--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -8,6 +8,11 @@ on:
         default: ""
         required: false
         type: string
+      package-manager:
+        description: "The packager manager with which to run lint. Defaults to npm"
+        default: "npm"
+        required: false
+        type: string      
 
 jobs:
   unit-test:
@@ -25,18 +30,46 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      - name: Install pnpm
+        if: inputs.package-manager == "pnpm"
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
       - name: Setup node
+        if: inputs.package-manager == "npm"
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: "npm"
           cache-dependency-path: ${{ env.PATH_PREFIX }}/package-lock.json
 
+      - name: Setup node
+        if: inputs.package-manager == "pnpm"
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+          cache: "pnpm"
+          cache-dependency-path: ${{ env.PATH_PREFIX }}/pnpm-lock.yaml
+
       - name: Load dependencies
+        if: inputs.package-manager == "npm"
         uses: actions/cache@v4
         with:
           path: ${{ env.PATH_PREFIX }}/node_modules
           key: ${{ format('{0}node_modules-{1}', env.CACHE_PREFIX, hashFiles(format('{0}/package-lock.json', env.PATH_PREFIX))) }}
 
+      - name: Load dependencies
+        if: inputs.package-manager == "pnpm"
+        uses: actions/cache@v3
+        with:
+          path: ${{ env.PATH_PREFIX }}/node_modules
+          key: ${{ format('{0}node_modules-{1}', env.CACHE_PREFIX, hashFiles(format('{0}/pnpm-lock.yaml', env.PATH_PREFIX))) }}
+
       - name: Run Tests
+        if: inputs.package-manager == "npm"
         run: npm run test
+
+      - name: Run Tests
+        if: inputs.package-manager == "pnpm"
+        run: pnpm run test
