--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -31,13 +31,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install pnpm
-        if: inputs.package-manager == "pnpm"
+        if: inputs.package-manager == 'pnpm'
         uses: pnpm/action-setup@v4
         with:
           version: 9
 
       - name: Setup node
-        if: inputs.package-manager == "npm"
+        if: inputs.package-manager == 'npm'
         uses: actions/setup-node@v3
         with:
           node-version: 20
@@ -45,7 +45,7 @@ jobs:
           cache-dependency-path: ${{ env.PATH_PREFIX }}/package-lock.json
 
       - name: Setup node
-        if: inputs.package-manager == "pnpm"
+        if: inputs.package-manager == 'pnpm'
         uses: actions/setup-node@v3
         with:
           node-version: 20
@@ -53,23 +53,23 @@ jobs:
           cache-dependency-path: ${{ env.PATH_PREFIX }}/pnpm-lock.yaml
 
       - name: Load dependencies
-        if: inputs.package-manager == "npm"
+        if: inputs.package-manager == 'npm'
         uses: actions/cache@v3
         with:
           path: ${{ env.PATH_PREFIX }}/node_modules
           key: ${{ format('{0}node_modules-{1}', env.CACHE_PREFIX, hashFiles(format('{0}/package-lock.json', env.PATH_PREFIX))) }}
 
       - name: Load dependencies
-        if: inputs.package-manager == "pnpm"
+        if: inputs.package-manager == 'pnpm'
         uses: actions/cache@v3
         with:
           path: ${{ env.PATH_PREFIX }}/node_modules
           key: ${{ format('{0}node_modules-{1}', env.CACHE_PREFIX, hashFiles(format('{0}/pnpm-lock.yaml', env.PATH_PREFIX))) }}
 
       - name: Lint
-        if: inputs.package-manager == "npm"
+        if: inputs.package-manager == 'npm'
         run: npm run lint
 
       - name: Lint
-        if: inputs.package-manager == "pnpm"
+        if: inputs.package-manager == 'pnpm'
         run: pnpm run lint
