--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -13,6 +13,11 @@ on:
         default: false
         required: false
         type: boolean
+      package-manager:
+        description: "The packager manager with which to run install. Defaults to npm"
+        default: "npm"
+        required: false
+        type: string
 
     outputs:
       cache-path:
@@ -36,6 +41,8 @@ jobs:
     env:
       PATH_PREFIX: ${{ inputs.working-directory && format('{0}/{1}', github.workspace, inputs.working-directory) || github.workspace }}
       CACHE_PREFIX: ${{ inputs.working-directory && format('{0}-', inputs.working-directory) || '' }}
+      PACKAGE_LOCK: ${{ inputs.package-manager == 'pnpm' && 'pnpm-lock.yaml' || 'package-lock.json' }}
+      INSTALL_CMD: ${{ inputs.package-manager == 'pnpm' && 'pnpm install' || 'npm ci' }}
 
     outputs:
       cache-path: ${{ steps.cache.outputs.path }}
@@ -51,7 +58,7 @@ jobs:
         with:
           node-version: 16
           cache: "npm"
-          cache-dependency-path: ${{ env.PATH_PREFIX }}/package-lock.json
+          cache-dependency-path: ${{ env.PATH_PREFIX }}/${{ env.PACKAGE_LOCK }}
           # Our Design System is on github's package registry
           registry-url: "https://npm.pkg.github.com"
 
@@ -59,7 +66,7 @@ jobs:
         id: cache
         run: |
           echo "path=${{ env.PATH_PREFIX }}/node_modules" >> $GITHUB_OUTPUT
-          echo "key=${{ format('{0}node_modules-{1}', env.CACHE_PREFIX, hashFiles(format('{0}/package-lock.json', env.PATH_PREFIX))) }}" >> $GITHUB_OUTPUT
+          echo "key=${{ format('{0}node_modules-{1}', env.CACHE_PREFIX, hashFiles(format('{0}/{1}', env.PATH_PREFIX, env.PACKAGE_LOCK))) }}" >> $GITHUB_OUTPUT
           echo "restore=${{ format('{0}node_modules-', env.CACHE_PREFIX) }}" >> $GITHUB_OUTPUT
 
       - name: Cache dependencies
@@ -74,7 +81,7 @@ jobs:
       - name: Install dependencies (without scripts)
         id: install
         if: steps.cache-dependencies.outputs.cache-hit != 'true'
-        run: npm ci --ignore-scripts ${{ inputs.legacy-peer-deps == true && '--legacy-peer-deps' || '' }}
+        run: ${{ env.INSTALL_CMD }} --ignore-scripts ${{ inputs.legacy-peer-deps == true && '--legacy-peer-deps' || '' }}
         env:
           # See https://github.com/actions/setup-node/blob/main/docs/advanced-usage.md#use-private-packages
           NODE_AUTH_TOKEN: ${{ secrets.GPR_READ_TOKEN }}
@@ -82,4 +89,4 @@ jobs:
       # `npm rebuild` will run all those post-install scripts for us.
       - name: Run post-install scripts
         if: steps.install.outcome == 'success'
-        run: npm rebuild && npm run prepare --if-present
+        run: ${{ inputs.package-manager }} rebuild && ${{ inputs.package-manager }} run prepare --if-present
