--- a/.github/workflows/install.yml
+++ b/.github/workflows/install.yml
@@ -53,11 +53,16 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+
       - name: Setup node
         uses: actions/setup-node@v4
         with:
           node-version: 16
-          cache: "npm"
+          cache: ${{ inputs.package-manager }}
           cache-dependency-path: ${{ env.PATH_PREFIX }}/${{ env.PACKAGE_LOCK }}
           # Our Design System is on github's package registry
           registry-url: "https://npm.pkg.github.com"
